@@ -1,11 +1,14 @@
 2011-04-25  James Youngman  <jay@gnu.org>
 
+	Avoid retrying link(2) when errno is set to ENOSYS.
+	* src/file.cc (atomic_nfs_create): If link(2) fails with ENOSYS,
+	there is no point in retrying.
+
 	Bugfix for lndir on OpenSolaris: ignore . and ..
 	* testutils/lndir.c (dodir): Ignore . and .. (on systems where
 	readdir returns them).
 
 2011-04-24  James Youngman  <jay@gnu.org>
-
 	Tell the user to run "bootstrap" instead of "autogen.sh".
 	* README: "autogen.sh" has been replaced by "bootstrap".
 
